test/modules/diten/returnClassDiffModule6.good
returnClassDiffModule6.chpl:12: In function 'main':
returnClassDiffModule6.chpl:14: error: unresolved call 'unmanaged C.myvar'
